--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "talkjs": "^0.15.1"
+    "talkjs": "^0.15.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.7.0",
